# haskell-generalized-functors

./: README.md  generalized-functors.cabal
src/Data/: Functors.hs
src/Data/Functors/: Types.hs  Wrapped.hs
