name:                generalized-functors
version:             0.1.0.0
synopsis:            Generalized functors
-- description:
homepage:            https://github.com/srijs/haskell-generalized-functors
license:             MIT
license-file:        LICENSE
author:              Sam Rijs
maintainer:          srijs@airpost.net
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Functors
                       Data.Functors.Wrapped
  other-modules:       Data.Functors.Types
  -- other-extensions:
  build-depends:       base >=4.6 && <5,
                       transformers >=0.4,
                       contravariant >=1.3,
                       invariant >=0.1,
                       bifunctors >=5,
                       profunctors >=5.1
  hs-source-dirs:      src
  default-language:    Haskell2010
